--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="heading">
 				<h1 class="head">WELCOME TO <span>HACKATOBERFEST</span></h1>
-				<h3 class="sub">DSC-128 X HACKATOBERFEST</h3>	
+				<h3 class="sub">gDSC-128 X HACKATOBERFEST</h3>	
 				<div class="btns">
 					<a class="btn1" href="#">CONTRIBUTE</a>
 					<a class="btn2" href="#">JOIN US</a>
