--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
 			</div>
 		</div>
 	</div>
+	<footer>
+		<h4 class="contact-text">CONTACT US</h4>
+      	<h4 class="contact-text">© 2021 DigitalOcean, LLC. All rights reserved</h4>
+		<div class="contact">
+		  <a href="#"><img src="./facebook.svg" class="contact-img"></a>
+		  <a href="#"><img src="./Github.svg" class="contact-img"></a>
+		  <a href="#"><img src="./google-plus.svg" class="contact-img"></a>
+		  <a href="#"><img src="./Instagram.svg" class="contact-img"></a>
+		  <a href="#"><img src="./Twitter.svg" class="contact-img"></a>
+		</div>
+	</footer>
+
 </body>
 
 </html>
